--- a/src/app/ngtube.component.html
+++ b/src/app/ngtube.component.html
@@ -1,3 +1,9 @@
-<h1>
-  {{title}}
-</h1>
+<header>
+  <app-navbar></app-navbar>
+  <div class="container">
+    <a class="button-collapse top-nav full hide-on-large-only" data-activates="nav-mobile">
+      <i class="material-icons">menu</i>
+    </a>
+  </div>
+  <app-sidenav></app-sidenav>
+</header>
