--- a/src/app/ngtube.component.html
+++ b/src/app/ngtube.component.html
@@ -7,3 +7,13 @@
   </div>
   <app-sidenav></app-sidenav>
 </header>
+
+<div class="container">
+  <youtube-player
+    playerId="player"
+    [autoplay]="false"
+    [width]="720"
+    [height]="480">
+  </youtube-player>
+    
+</div>
