Add video Id as parameter

--- a/src/app/ngtube.component.html
+++ b/src/app/ngtube.component.html
@@ -11,7 +11,8 @@
 <div class="container">
   <youtube-player
     playerId="player"
-    [autoplay]="false"
+    [autoplay]="true"
+    [videoId]="'1cRQ8pS21-4'"
     [width]="720"
     [height]="480">
   </youtube-player>
