Add container to navbar

--- a/src/app/ngtube.component.html
+++ b/src/app/ngtube.component.html
@@ -8,13 +8,16 @@
   <app-sidenav></app-sidenav>
 </header>
 
-<div class="container">
-  <youtube-player
-    playerId="player"
-    [autoplay]="true"
-    [videoId]="'1cRQ8pS21-4'"
-    [width]="720"
-    [height]="480">
-  </youtube-player>
-    
+<div class="section no-pad-bot">
+  <div class="container">
+    <youtube-player
+      playerId="player"
+      [autoplay]="false"
+      [videoId]="'1cRQ8pS21-4'"
+      [width]="720"
+      [height]="480">
+    </youtube-player>
+      
+  </div>
 </div>
+
