--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,15 +1,17 @@
 <div class="nav-fixed">
-    <nav>
-        <div class="nav-wrapper">
-           <form>
-               <div class="input-field">
-                   <input id="search" type="search">
-                   <label for="search">
-                       <i class="material-icons">search</i>
-                   </label>
-                    <i class="material-icons">close</i>
-               </div>
-           </form>
+    <nav class="top-nav light-blue darken-4">
+        <div class="container">
+            <div class="nav-wrapper">
+            <form>
+                <div class="input-field">
+                    <input id="search" type="search">
+                    <label for="search">
+                        <i class="material-icons">search</i>
+                    </label>
+                        <i class="material-icons">close</i>
+                </div>
+            </form>
+            </div>
         </div>
     </nav>
 </div>
