Thumbnail list component

--- a/src/app/ngtube.component.html
+++ b/src/app/ngtube.component.html
@@ -4,6 +4,7 @@
     <a class="button-collapse top-nav full hide-on-large-only" data-activates="nav-mobile">
       <i class="material-icons">menu</i>
     </a>
+    <thumbnail-list [videos]="research"></thumbnail-list>
   </div>
   <app-sidenav></app-sidenav>
 </header>
