--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,11 +1,9 @@
-<ul id="nav-mobile" class="left side-nav fixed">
-  <li>
-    <a>
-      Video 1
-    </a>
+<ul id="nav-mobile" class="left side-nav fixed grey lighten-5">
+  <li id="logo-container" class="brand-logo">
+    <div class="brand-title center-align">NgTube</div>
   </li>
   <li>
-    <a>
+    <a class="pink lighten-5">
       Video 2
     </a>
   </li>
