--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="nav-fixed">
+<div class="navbar-fixed">
     <nav class="top-nav grey lighten-5">
         <div class="container search-wrapper">
             <div class="nav-wrapper">
