Fix path issue and set opacity up

--- a/src/app/thumbnail/thumbnail.component.html
+++ b/src/app/thumbnail/thumbnail.component.html
@@ -1,11 +1,17 @@
 <div>
     <h5>{{title}}</h5>
     <div class="thumbNail">
-        <img [src]="url" [style.opacity]="hover ? 0.4 : 1" [style.position]="relative" [style.z-index]="0" class="responsive-img"
+        <img [src]="url" 
+            [style.opacity]="hover ? 0.6 : 1" 
+            [style.position]="relative" 
+            [style.z-index]="0"
+            class="responsive-img"
         />
 
         <div class="playArrow">
-            <i [hidden]="false" [style.z-index]="1" class="material-icons medium icon-demo">
+            <i [hidden]="!hover" 
+            [style.z-index]="1" 
+            class="material-icons medium icon-demo">
                 play_arrow
             </i>
         </div>
