Update search field

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -3,10 +3,15 @@
 }
 
 .material-icons {
-    color: black;
+    color: black !important;
+}
+
+#search {
+    color: black !important;
 }
 
 .input-field {
     margin-left: 15px;
     width: 100%;
 }
+
