Add shadown to thumbnail

--- a/src/app/thumbnail/thumbnail.component.html
+++ b/src/app/thumbnail/thumbnail.component.html
@@ -1,11 +1,11 @@
 <div>
-    <h5>{{title}}</h5>
+    <h6>{{title}}</h6>
     <div class="thumbNail">
         <img [src]="url" 
             [style.opacity]="hover ? 0.6 : 1" 
             [style.position]="relative" 
             [style.z-index]="0"
-            class="responsive-img"
+            class="z-depth-3 responsive-img"
         />
 
         <div class="playArrow">
