--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="navbar-fixed">
     <nav class="top-nav grey lighten-5">
-        <div class="container search-wrapper">
+        <!--<div class="container search-wrapper">-->
             <div class="nav-wrapper">
                 <form class="search-wrapper" [ngFormModel]="form" (submit)="onSearch()">
                     <div class="input-field search-wrapper">
@@ -14,7 +14,7 @@
                     </div>
                 </form>
             </div>
-        </div>
+        <!--</div>-->
     </nav>
 </div>
 
