Adapt thumbnail list design

--- a/src/app/thumbnail/thumbnail.component.html
+++ b/src/app/thumbnail/thumbnail.component.html
@@ -1,6 +1,6 @@
-<div>
-    <h6>{{title}}</h6>
-    <div class="thumbNail">
+<div class="thumbNail">
+    <a href="#/"><h6>{{title}}</h6></a>
+    <div class="thumb">
         <img [src]="url" 
             [style.opacity]="hover ? 0.6 : 1" 
             [style.position]="relative" 
