--- a/src/app/thumbnail/thumbnail.component.css
+++ b/src/app/thumbnail/thumbnail.component.css
@@ -1,10 +1,16 @@
 .playArrow {
     position: absolute;
-    top: 20px;
-    left: 30px;
+    width: 200px;
+    text-align: center;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.thumb {
+    position: relative;
+    display: inline-block;
 }
 
 .thumbNail {
-    position: relative;
-    display: inline-block;
+    width: 200px;
 }
