--- a/src/app/ngtube.component.css
+++ b/src/app/ngtube.component.css
@@ -2,12 +2,13 @@
     padding-left: 200px;
 }
 
-header {
+header, footer {
     padding-left: 240px;
 }
 
+
 @media only screen and (max-width : 992px) {
-    header, .section {
+    header, .section, footer {
         padding-left: 0;
     }
 }
