--- a/src/app/ngtube.component.html
+++ b/src/app/ngtube.component.html
@@ -1,11 +1,11 @@
 <header>
-  <app-navbar></app-navbar>
-  <div class="container">
+  <navbar></navbar>
+  <!--<div class="container">
     <a class="button-collapse top-nav full hide-on-large-only" data-activates="nav-mobile">
       <i class="material-icons">menu</i>
     </a>
-  </div>
-  <app-sidenav></app-sidenav>
+  </div>-->
+  <sidenav></sidenav>
 </header>
 
 <div class="section no-pad-bot">
@@ -21,3 +21,6 @@
   </div>
 </div>
 
+<footer>
+    <navbar-footer></navbar-footer>
+</footer>
