--- a/src/app/ngtube.component.css
+++ b/src/app/ngtube.component.css
@@ -1,9 +1,15 @@
 .section {
     padding-left: 200px;
+    padding-bottom: 150px;
 }
 
 header, footer {
     padding-left: 240px;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
 }
 
 
