--- a/src/app/thumbnail/thumbnail.component.html
+++ b/src/app/thumbnail/thumbnail.component.html
@@ -11,7 +11,7 @@
             <i [hidden]="!hover" 
             [style.z-index]="1" 
             class="material-icons medium icon-demo">
-                play_arrow
+                play_circle_outline
             </i>
         </div>
     </div>
