--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,11 +1,27 @@
-<ul id="nav-mobile" class="left side-nav fixed grey lighten-5">
-  <li id="logo-container" class="brand-logo">
-    <div class="brand-title center-align">NgTube</div>
+<ul id="nav-mobile" class="left side-nav fixed">
+  <li class="brand center-align">
+    <i class="ion-social-youtube brand-logo"></i>
+    <span class="brand-title center-align">NgTube</span>
   </li>
-  <li>
-    <a class="pink lighten-5">
-      Video 2
-    </a>
+  <li class="sidenav-category blue-grey darken-4 valign-wrapper">
+    <div class="sidenav-category-icon valign-wrapper valign">
+        <i class="material-icons valign">favorite</i>
+    </div>
+    <div class="sidenav-category-text center-align">
+        Playlist
+    </div>
+  </li>
+  <li class="sidenav-item">
+    Video 1
+  </li>
+  <li class="sidenav-item active">
+    Video 2
+  </li>
+  <li class="sidenav-item">
+    Video 3
+  </li>
+  <li class="sidenav-item">
+    Video 4
   </li>
 </ul>
 
