--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -11,7 +11,11 @@
 }
 
 .input-field {
-    /*margin-left: 15px;*/
     width: 70%;
 }
 
+
+.dropdown-button {
+    color: black;
+    font-size: 18px;
+}
