--- a/src/app/thumbnail-list/thumbnail-list.component.html
+++ b/src/app/thumbnail-list/thumbnail-list.component.html
@@ -1,6 +1,6 @@
 <div>
     <ul class="row">
-        <li *ngFor="let result of searchResults" class="col s4">
+        <li *ngFor="let result of searchResults" class="col s12 l3 m4">
             <thumbnail [title]="result.videoTitle" [url]="result.urlThumbnail"></thumbnail>
         </li>
     </ul>
