Add minimized player

--- a/src/app/ngtube.component.html
+++ b/src/app/ngtube.component.html
@@ -11,13 +11,7 @@
 <div class="section no-pad-bot">
   <div class="container">
     <thumbnail-list [videos]="research"></thumbnail-list>
-      <youtube-player
-        playerId="player"
-        [autoplay]="false"
-        [videoId]="'1cRQ8pS21-4'"
-        [width]="720"
-        [height]="480">
-      </youtube-player>
+    <player-container></player-container>
   </div>
 </div>
 
