--- a/src/app/player-container/player-container.component.html
+++ b/src/app/player-container/player-container.component.html
@@ -1,3 +1,7 @@
-<p>
-  player-container works!
-</p>
+<youtube-player
+    playerId="player"
+    [autoplay]="false"
+    [videoId]="'1cRQ8pS21-4'"
+    [width]="290"
+    [height]="192">
+</youtube-player>
