--- a/src/app/ngtube.component.html
+++ b/src/app/ngtube.component.html
@@ -11,7 +11,7 @@
 <div class="section no-pad-bot">
   <div class="container">
     <thumbnail-list [videos]="research"></thumbnail-list>
-    <player-container></player-container>
+    <player-container class="z-depth-3"></player-container>
   </div>
 </div>
 
