Listen to player state change

--- a/src/app/player-container/player-container.component.html
+++ b/src/app/player-container/player-container.component.html
@@ -4,5 +4,6 @@
     [autoplay]="false"
     [videoId]="video"
     [width]="width"
-    [height]="height">
+    [height]="height"
+    (stateChange)="stateChange($event.data)">
 </youtube-player>
