--- a/src/app/navbar-footer/navbar-footer.component.html
+++ b/src/app/navbar-footer/navbar-footer.component.html
@@ -19,7 +19,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="navbar-icon" (click)="onStop()">
+                    <a class="navbar-icon" [class.disabled]="isStop()" (click)="onStop()">
                         <i class="material-icons">stop</i>
                     </a>
                 </li>
