--- a/src/app/sidenav-tile/sidenav-tile.component.html
+++ b/src/app/sidenav-tile/sidenav-tile.component.html
@@ -1,3 +1,6 @@
-<p>
-  sidenav-tile works!
-</p>
+<div>
+  [class.active]="selected">
+  <h6>{{title}}</h6>
+  <div>{{}}</div>
+  <div><img [src]="thumbnailUrl" /></div>
+</div> 
