--- a/src/app/thumbnail-list/thumbnail-list.component.html
+++ b/src/app/thumbnail-list/thumbnail-list.component.html
@@ -1,4 +1,4 @@
-<div>
+<div [hidden]="isMaximized">
     <ul class="row">
         <li *ngFor="let result of searchResults" class="col s12 l3 m4">
             <thumbnail (click)="onClick(result.videoId)" [title]="result.videoTitle" [url]="result.urlThumbnail"></thumbnail>
