Fix selector name

--- a/src/app/sidenav-tile/sidenav-tile.component.html
+++ b/src/app/sidenav-tile/sidenav-tile.component.html
@@ -1,6 +1,5 @@
-<div>
-  [class.active]="selected">
+<div [class.active]="selected">
   <h6>{{title}}</h6>
-  <div>{{}}</div>
+  <div>ROUUUUNDABOUT</div>
   <div><img [src]="thumbnailUrl" /></div>
 </div> 
