Add store to sidebar

--- a/src/app/sidenav-tile/sidenav-tile.component.html
+++ b/src/app/sidenav-tile/sidenav-tile.component.html
@@ -1,5 +1,5 @@
-<div [class.active]="selected">
+<div>
   <h6>{{title}}</h6>
-  <div>ROUUUUNDABOUT</div>
-  <div><img [src]="thumbnailUrl" /></div>
+  <img class="z-depth-1 responsive-img" [src]="thumbnailUrl" width="40px" height="40px"/>
+  <p>{{duration}}</p>
 </div> 
