--- a/src/app/ngtube.component.html
+++ b/src/app/ngtube.component.html
@@ -8,7 +8,7 @@
   <sidenav></sidenav>
 </header>
 
-<div class="section no-pad-bot" [ngClass]="{cinema: isCinemaMode}">
+<div class="section no-pad-bot" [class.cinema]="(cinemaMode | async) && !(minimize | async)">
   <div class="container">
     <thumbnail-list [videos]="research"></thumbnail-list>
     <player-container class="z-depth-3"></player-container>
