--- a/src/app/sidenav-tile/sidenav-tile.component.html
+++ b/src/app/sidenav-tile/sidenav-tile.component.html
@@ -1,4 +1,4 @@
-<div>
+<div [style.display]="inline-block">
   <h6>{{title}}</h6>
   <img class="z-depth-1 responsive-img" [src]="thumbnailUrl" width="40px" height="40px"/>
   <p>{{duration}}</p>
