Fix inline list

--- a/src/app/sidenav-tile/sidenav-tile.component.html
+++ b/src/app/sidenav-tile/sidenav-tile.component.html
@@ -1,5 +1,5 @@
-<div [style.display]="inline-block">
-  <h6>{{title}}</h6>
-  <img class="z-depth-1 responsive-img" [src]="thumbnailUrl" width="40px" height="40px"/>
-  <p>{{duration}}</p>
+<div >
+  <h6 [style.display]="'inline-block'">{{title}}</h6>
+  <img [style.display]="'inline-block'" class="z-depth-1 responsive-img" [src]="thumbnailUrl" width="40px" height="40px"/>
+  <p [style.display]="'inline-block'">{{duration}}</p>
 </div> 
