Add playlist icon on add text

--- a/src/app/thumbnail/thumbnail.component.html
+++ b/src/app/thumbnail/thumbnail.component.html
@@ -30,7 +30,10 @@
             {{video.title}}
         </span>
         <span [hidden]="title">
-            Add to playlist
+             <i [style.z-index]="1" 
+                class="material-icons tiny icon-demo">
+                    view_list
+                </i> Add to playlist
         </span>
     </h6>
 </div>
