Playlist clean button added

--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -10,6 +10,7 @@
     <div class="sidenav-category-text center-align">
         Playlist
     </div>
+    <a class="btn-floating red"><i class="material-icons">insert_chart</i></a>
   </li>
   
   <li class="sidenav-item" *ngFor="let video of videos" [class.active]="video.selected">
