--- a/src/app/navbar-footer/navbar-footer.component.html
+++ b/src/app/navbar-footer/navbar-footer.component.html
@@ -3,6 +3,20 @@
         <div class="nav-wrapper">
             <ul class="left" [class.disabled]="disabled">
                 <li>
+                    <a class="navbar-icon" [class.disabled]="isStop()" (click)="onStop()">
+                        <i class="material-icons">stop</i>
+                    </a>
+                </li>
+                <li class="icon-divider"></li>
+                <li>
+                    <a class="navbar-icon" (click)="onRepeat()">
+                        <i class="material-icons" *ngIf="isRepeatNone()" [style.color]="'white'">repeat</i>
+                        <i class="material-icons" *ngIf="isRepeatAll()">repeat</i>
+                        <i class="material-icons" *ngIf="isRepeatOne()">repeat_one</i>
+                    </a>
+                </li>
+                <li class="icon-divider"></li>
+                <li>
                     <a class="navbar-icon" (click)="onPrevious()">
                         <i class="material-icons">skip_previous</i>
                     </a>
@@ -19,23 +33,11 @@
                     </a>
                 </li>
                 <li>
-                    <a class="navbar-icon" [class.disabled]="isStop()" (click)="onStop()">
-                        <i class="material-icons">stop</i>
-                    </a>
-                </li>
-                <li>
                     <a class="navbar-icon" (click)="onNext()">
                         <i class="material-icons">skip_next</i>
                     </a>
                 </li>
                 <li class="icon-divider"></li>
-                <li>
-                    <a class="navbar-icon" (click)="onRepeat()">
-                        <i class="material-icons" *ngIf="isRepeatNone()" [style.color]="'white'">repeat</i>
-                        <i class="material-icons" *ngIf="isRepeatAll()">repeat</i>
-                        <i class="material-icons" *ngIf="isRepeatOne()">repeat_one</i>
-                    </a>
-                </li>
                 <li>
                     <a class="navbar-icon" (click)="onVolume()">
                         <i class="material-icons">volume_up</i>
