--- a/src/app/sidenav/sidenav.component.css
+++ b/src/app/sidenav/sidenav.component.css
@@ -80,3 +80,9 @@
  sidenav-tile {
     width: 100%;
 }
+
+.side-nav a {     
+    color: #444;     
+    display: block;     
+    font-size: 1rem;
+}
