Add delete button in playlist

--- a/src/app/sidenav-tile/sidenav-tile.component.css
+++ b/src/app/sidenav-tile/sidenav-tile.component.css
@@ -17,3 +17,10 @@ h6 {
     text-overflow: ellipsis;
 }
 
+.removeVideoFromPlaylist {
+    position: absolute;
+    margin-top: -8px;
+    margin-left: 5px;
+    color: brown;
+    cursor: pointer;
+}
