--- a/src/app/sidenav-tile/sidenav-tile.component.html
+++ b/src/app/sidenav-tile/sidenav-tile.component.html
@@ -1,9 +1,14 @@
-<div>
-  <div [style.display]="'inline-block'" class="image">
-    <img class="z-depth-1 responsive-img" [src]="video.thumbnailUrl" width="40px" height="40px" />
+<div >
+  <div class="removeVideoFromPlaylist">
+    <i class="material-icons">clear</i>
   </div>
-  <div [style.display]="'inline-block'" class="title">
-    <h6 >{{video.title}}</h6>
-    <label>{{video.duration}}</label>
+  <div>
+    <div [style.display]="'inline-block'" class="image">
+      <img class="z-depth-1 responsive-img" [src]="video.thumbnailUrl" width="40px" height="40px" />
+    </div>
+    <div [style.display]="'inline-block'" class="title">
+      <h6>{{video.title}}</h6>
+      <label>{{video.duration}}</label>
+    </div>
   </div>
 </div>
