Display message on no video found

--- a/src/app/thumbnail-list/thumbnail-list.component.html
+++ b/src/app/thumbnail-list/thumbnail-list.component.html
@@ -8,7 +8,7 @@
             </thumbnail>
         </li>
     </ul>
-    <div *ngIf="videos.length === 0">
+    <div *ngIf="videos?.length === 0">
         <p>No results found, maybe try with another spelling?</p>
     </div>
 </div>
