Add hover effect on sidenav tile

--- a/src/app/sidenav-tile/sidenav-tile.component.css
+++ b/src/app/sidenav-tile/sidenav-tile.component.css
@@ -21,6 +21,6 @@ h6 {
     position: absolute;
     margin-top: -8px;
     margin-left: 5px;
-    color: brown;
+    color: red;
     cursor: pointer;
 }
