Display message on no video found (debounce)

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="navbar-fixed">
     <nav class="top-nav grey lighten-5">
             <div class="nav-wrapper">
-                <form class="search-wrapper row" [ngFormModel]="form" (keypress)="onSearch()" (submit)="onSearch()">
+                <form class="search-wrapper row" [ngFormModel]="form" (submit)="onSearch()">
                     <div class="input-field col s8 search-wrapper">
                         <input id="search" type="search" 
                                class="grey lighten-5"
