Usage of HMS pipe in tile

--- a/src/app/sidenav-tile/sidenav-tile.component.html
+++ b/src/app/sidenav-tile/sidenav-tile.component.html
@@ -8,7 +8,7 @@
     </div>
     <div [style.display]="'inline-block'" class="title">
       <h6>{{video.title}}</h6>
-      <label>{{video.duration}}</label>
+      <label>{{video.duration | isoToHMS}}</label>
     </div>
   </div>
 </div>
