--- a/src/app/thumbnail-list/thumbnail-list.component.html
+++ b/src/app/thumbnail-list/thumbnail-list.component.html
@@ -1,5 +1,5 @@
-<div *ngIf="show | async">
-    <ul class="row">
+<div *ngIf="(show | async)">
+    <ul class="row" *ngIf="!(loading | async)">
         <li *ngFor="let video of videos" class="col s12 l3 m4">
             <thumbnail 
                 (clickThumbnail)="onThumbnailClick(video)"
@@ -8,7 +8,7 @@
             </thumbnail>
         </li>
     </ul>
-    <div *ngIf="videos?.length === 0">
+    <div *ngIf="videos?.length === 0 && !(loading | async)">
         <p>No results found, maybe try with another spelling?</p>
     </div>
 </div>
