--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -10,7 +10,7 @@
     <div class="sidenav-category-text center-align">
         Playlist
     </div>
-    <div [style.width]="'100%'" >
+    <div [style.width]="'100%'" *ngIf="hover">
       <button class="btn btn-small btn-del waves-effect waves-light red" (click)="clearPlaylist()" [class.disabled]="videos.length === 0">
         <i class="material-icons">delete_forever</i>
       </button>
