Display better time in thumbnail

--- a/src/app/thumbnail/thumbnail.component.css
+++ b/src/app/thumbnail/thumbnail.component.css
@@ -8,7 +8,17 @@
 
 .duration {
     position: absolute;
-    right: 0;    
+    right: 0;
+    font-size: 14px;
+    margin-top: -27px;
+    margin-left: 5px;
+    background-color: grey;
+    color: white;
+}
+
+.duration span {
+    margin-left: 3px;
+    margin-right: 3px;
 }
 
 .thumb {
@@ -17,11 +27,5 @@
 }
 
 .thumbNail {
-    /*width: 200px;*/
     cursor: pointer;
-}
-
-.title {
-    position: relative;
-    top: 10px;
 }
