Fix click and add animation thumbnail

--- a/src/app/player-container/player-container.component.css
+++ b/src/app/player-container/player-container.component.css
@@ -3,3 +3,27 @@
     bottom: 75px;
     right: 20px;
 }
+
+@keyframes mini {
+    from {
+        position: static;
+    }
+    
+    to {
+        position: fixed;
+        bottom: 75px;
+        right: 20px;
+    }
+}
+
+
+@keyframes maxi {
+    0% {
+        position: fixed;
+        bottom: 75px;
+        right: 20px;
+    }
+    
+    100% {
+    }
+}
