--- a/src/app/thumbnail/thumbnail.component.css
+++ b/src/app/thumbnail/thumbnail.component.css
@@ -6,6 +6,24 @@
     opacity: 0.5;
 }
 
+.thumbnail:hover > .thumb img {
+    opacity: 0.6;
+    animation: hover-opacity .4s ease-out;
+}
+
+@keyframes hover-opacity {
+    
+    from {
+        opacity: 1;
+    }
+    
+    to {
+        opacity: 0.6;
+    }
+}
+
+
+
 .duration {
     position: absolute;
     right: 0;    
@@ -16,7 +34,7 @@
     display: inline-block;
 }
 
-.thumbNail {
+.thumbnail {
     /*width: 200px;*/
     cursor: pointer;
 }
